[package]
name = "venomstrike"
version = "1.0.0"
edition = "2021"
authors = ["Soulcynics404"]
description = "Advanced Web Vulnerability Scanner & VAPT Reporter"
license = "MIT"
repository = "https://github.com/Soulcynics404/venomstrike"
readme = "README.md"
keywords = ["security", "scanner", "vulnerability", "vapt", "pentest"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies", "rustls-tls", "socks"] }
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
regex = "1.10"
url = "2.5"
scraper = "0.18"
colored = "2.1"
indicatif = { version = "0.17", features = ["rayon"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
trust-dns-resolver = "0.23"
csv = "1.3"
base64 = "0.21"
sha2 = "0.10"
html-escape = "0.2"
askama = "0.12"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
governor = "0.6"
nonzero_ext = "0.3"
native-tls = "0.2"
tokio-native-tls = "0.3"
x509-parser = "0.15"
dns-lookup = "2.0"
rand = "0.8"
percent-encoding = "2.3"
urlencoding = "2.1"
tabled = "0.15"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "venomstrike"
path = "src/main.rs"